--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-camera-roll/camera-roll": "^7.8.3",
     "@react-native-firebase/analytics": "^20.3.0",
     "@react-native-firebase/app": "^20.3.0",
     "@react-navigation/drawer": "^6.7.2",
@@ -39,6 +40,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
